fix(media): center align

--- a/packages/ibm-products-styles/src/components/GetStarted/_get-started.scss
+++ b/packages/ibm-products-styles/src/components/GetStarted/_get-started.scss
@@ -57,6 +57,10 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
   padding-right: $spacing-09;
 }
 
+.#{$block-class}__get-started .#{$block-class}__media {
+  align-content: center;
+}
+
 .#{$block-class}__get-started
   .#{$block-class}__pictogram
   ~ .#{$block-class}__content-container {
